idea/tests/testData/multiplatform/aliasesTypeMismatch/commonLibrary/lib.kt
public expect open class <!LINE_MARKER("descr='Has actuals in JVM'"), LINE_MARKER("descr='Is subclassed by MyCancelException [common] MyIllegalStateException [commonLibrary] OtherException [common]'")!>MyException<!>

public expect open class <!LINE_MARKER("descr='Has actuals in JVM'"), LINE_MARKER("descr='Is subclassed by MyCancelException [common] OtherException [common]'")!>MyIllegalStateException<!> : MyException
